--- a/.editorconfig
+++ b/.editorconfig
@@ -2,12 +2,12 @@ root = true
 
 [*]
 charset = utf-8
-indent_style = tab
-indent_size = 4
-tab_width = 4
-trim_trailing_whitespace = true
-
-[*.yml]
 indent_size = 2
-indent_style = tab
 tab_width = 2
+indent_style = tab
+trim_trailing_whitespace = true
+insert_final_newline = false
+
+[*.md]
+max_line_length = off
+trim_trailing_whitespace = false
