--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM node:latest as build
 
-WORKDIR /usr/local/app
+WORKDIR /usr/local/app/
 COPY ./ /usr/local/app/
 
 RUN npm install
@@ -13,7 +13,6 @@ RUN npm run build
 
 FROM nginx:latest
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
-COPY --from=build /usr/local/app/www /usr/share/nginx/html
+COPY --from=build /usr/local/app/dist/sky-explorer /usr/share/nginx/html
 
-# Expose port 80
 EXPOSE 80
