--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,35 +6,27 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:SkyExplorer": "node dist/sky-explorer/server/server.mjs"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.1.0",
-    "@angular/cdk": "^17.3.1",
     "@angular/common": "^17.1.0",
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.1.0",
     "@angular/forms": "^17.1.0",
-    "@angular/material": "^17.3.1",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
-    "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
-    "@angular/ssr": "^17.1.1",
-    "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.1.1",
-    "@angular/cli": "^17.1.1",
+    "@angular-devkit/build-angular": "^17.1.0",
+    "@angular/cli": "^17.1.0",
     "@angular/compiler-cli": "^17.1.0",
-    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
