Fixed Default ConnectionString to work for Docker DB

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -6,7 +6,7 @@
 		"ExpirationSeconds": 86400
 	},
 	"ConnectionStrings": {
-		"DefaultConnection": "Server=db; Database=postgres; User Id=postgres; Password=postgres;"
+		"DefaultConnection": "Server=localhost:5432; Database=db_skyexplorer; User Id=postgres_user; Password=1234;"
 	},
 	"Logging": {
 	"LogLevel": {
