--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -20,6 +20,7 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
 COPY --from=build /app/out ./
+RUN mkdir -p ./swagger/v1/
 
 # Expose the desired port
 ENV ASPNETCORE_URLS=http://+:5001
